--- a/02_introduccion_a_django.ipynb
+++ b/02_introduccion_a_django.ipynb
@@ -305,11 +305,24 @@
    "source": [
     "## Creación de una aplicación.\n",
     "\n",
-    "Para crear una aplicación se \n",
+    "Para crear una aplicación se utiliza el siguiente comando especificando el directorio en el que se encontrará la aplicación dentro del directorio del proyecto.\n",
     "\n",
-    "\n",
-    "manage.py \n",
-    "\n",
+    "```\n",
+    "./manage.py startapp <directorio>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* La siguiente celda creará el sistema de archivos de una aplicación localizada en un nuevo subdirectorio llamado ```main``` en el directorio ```prueba```."
    ]
   },
@@ -386,7 +399,7 @@
     "\n",
     "A continuación se ejecutará el servidor web de *Django*, el cual desplegará la página que se genera por defecto.\n",
     "\n",
-    "El servidor de *Django* está configurado para atender peticiones de ```localhost``` en el puerto ```8000```, pero en este caso, se le indicará que atienda las peticiones desde cualquier IP en el puerto ```5000```.\n",
+    "El servidor de *Django* está configurado para atender peticiones de ```localhost``` en el puerto ```8000```, pero en este caso, se le indicará que atienda las peticiones desde cualquier IP, usando la máscara ``` 0.0.0.0``` en el puerto ```5000```.\n",
     "\n",
     "**Nota:** \n",
     "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```5000```. \n",
@@ -437,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
