--- a/03_el_protocolo_http.ipynb
+++ b/03_el_protocolo_http.ipynb
@@ -11,23 +11,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El protocolo HTTP.\n",
+    "## El protocolo *HTTP*.\n",
     "\n",
     "Creado por Tim Berners-Lee en 1989, es el protocolo utilizado para acceder y publicar en la World Wide Web (o  web).\n",
     "Significa Protocolo de transmisión de hipertexto.\n",
     "\n",
-    "Actualmente el World Wide Web Consortium (W3C) es la entidad encargada, entre otras cosas, de publicar la especificación del protocolo HTTP. La versión más reciente es HTTP/2, pero la mayoría de los servidores utilizan la versión HTTP/1.1.\n",
+    "Actualmente el [World Wide Web Consortium (*W3C*)](https://www.w3.org) es la entidad encargada, entre otras cosas, de publicar la especificación del protocolo *HTTP*. La versión más reciente es *HTTP/2*, pero la mayoría de los servidores utilizan la versión *HTTP/1.1*.\n",
     "\n",
-    "https://www.w3.org/Protocols/\n",
+    "La siguiente liga corresponde al listado de protocolos publicados por la *W3C*.\n",
     "\n",
-    "HTTP está basado en  una arquitectura cliente-servidor en la que se intercambian peticiones (requests) por parte del cliente y respuestas (responses) por parte del servidor."
+    "https://www.w3.org/Protocols/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Características.\n",
+    "### Características de *HTTP*.\n",
+    "\n",
+    "*HTTP* está basado en  una arquitectura cliente-servidor en la que se intercambian peticiones (requests) por parte del cliente y respuestas (responses) por parte del servidor y tiene las siguientes caracterísiticas. \n",
+    "\n",
     "* **Sin estado.** Es decir, que cada una de las transacciones request/response que se realizan no afectan al estado del cliente o del servidor, además de que cada transacción es totalmente independiente de el resto.\n",
     "* **Independiente del contenido.** Aún cuando es muy común que un servidor HTTP entregue documentos HTML, pero no existe restricción en el tipo de recurso al que se pueda acceder.\n",
     "* **Sin conexión.** Una vez que la transacción request/response es terminada, la conexión entre cliente y servidor es destruida.\n"
@@ -37,23 +40,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Uniform Resource Locator (URL).\n",
+    "### Uniform Resource Locator (*URL*).\n",
     "\n",
-    "El protocolo HTTP permite localizar los diversos recursos disponbles en la web mediante los Localizadores Uniformes de Recursos (URL). La estructura de una URL es la siguiente:\n",
+    "El protocolo *HTTP* permite localizar los diversos recursos disponbles en la web mediante los Localizadores Uniformes de Recursos (*URL* por sus siglas en inglés). La estructura de una *URL* es la siguiente:\n",
     "\n",
     "```\n",
     "http://<subdominio>.<dominio>:<puerto>/<ruta absoluta>?<parámetros>\n",
     "```\n",
     "\n",
-    "HTTP utiliza por defecto el puerto 80.\n",
+    "*HTTP* utiliza por defecto el puerto ```80```.\n",
     "\n",
-    "El protocolo HTTPS es una variación del HTTP que permite cifrar las comunicaciones entre el cliente y el servdor. \n",
+    "El protocolo *HTTPS* es una variación del *HTTP* que permite cifrar las comunicaciones entre el cliente y el servidor usando el protocolo [*TLS/SSL*](https://es.wikipedia.org/wiki/Transport_Layer_Security) definiendo la *URL* de la siguiente forma: \n",
     "\n",
     "```\n",
     "https://<subdominio>.<dominio>:<puerto>/<ruta absoluta>?<parámetros>\n",
     "```\n",
     "\n",
-    "HTTPS utiliza el puerto 443 por defecto."
+    "*HTTPS* utiliza el puerto ```443``` por defecto."
    ]
   },
   {
@@ -74,9 +77,10 @@
    "metadata": {},
    "source": [
     "## Mensajes de estado.\n",
-    "Los mensajes de estado permiten informar al cliente sobre la manera en la que ha sido procesada la petición. Está conformado por un número entero de 3 dígitos. En caso de que la petición haya sido procesada exitosamente, el servidor regresa el número 200.\n",
+    "Los mensajes de estado permiten informar al cliente sobre la manera en la que ha sido procesada la petición. Está conformado por un número entero de 3 dígitos. En caso de que la petición haya sido procesada exitosamente, el servidor regresa el número ```200```.\n",
     "\n",
     "### Tipos por el número inicial:\n",
+    "\n",
     "* 1xx Información.\n",
     "* 2xx Éxito.\n",
     "* 3xx Redireccionamiento.\n",
@@ -90,11 +94,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Métodos HTTP.\n",
+    "## Métodos de *HTTP*.\n",
     "\n",
-    "El protocolo HTTP define métodos o \"verbos\", los cuales permiten realizar peticiones específicas entre un cliente y un servidor. Algunos de los métodos más utilizados son:\n",
+    "El protocolo *HTTP* define métodos o \"verbos\", los cuales permiten realizar peticiones específicas entre un cliente y un servidor. Algunos de los métodos más utilizados son:\n",
     "\n",
-    "* ```GET``` se utiliza para obtener los datos de un recurso a partir de una URI. La información enviada mediante ```GET``` puede ser añadida a marcadores y puede ser regsitrada en las bitácoras del servidor.\n",
+    "* ```GET``` se utiliza para obtener los datos de un recurso a partir de una URL. La información enviada mediante ```GET``` puede ser añadida a marcadores y puede ser regsitrada en las bitácoras del servidor.\n",
     "* ```HEAD``` es similar al método ```GET```, pero sólo proporciona el encabezado de la petición y el mensaje de estado resultante.\n",
     "* ```POST``` se utiliza para cear un recurso. Los datos enviados no son expuestos en la URI sino que son enviados dentro de la estructura de la petición. \n",
     "* ```PUT``` se utiliza para sustituir un recurso existente y su estructura es similar a la de ```POST```.\n",
@@ -344,7 +348,7 @@
     "Se utilizará la función ```requests.get()``` para acceder a http://pythonista.mx para abir una conexión enviando una petición ```GET```. Se desplegarán los siguientes datos guardados en el objeto resultante.\n",
     "\n",
     "* El mensaje de estado resultante.\n",
-    "* Los envcabezados del mensaje de respuesta."
+    "* Los encabezados del mensaje de respuesta."
    ]
   },
   {
@@ -375,7 +379,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "Se utilizará get para obtener un recurso que corresponde a una imagen https://httpbin.org/image/png."
+    "* Se utilizará ```requests.get()``` para obtener un recurso que corresponde a una imagen https://httpbin.org/image/png."
    ]
   },
   {
@@ -388,6 +392,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará el contenido bruto que fue enviado como respuesta."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -396,6 +407,13 @@
    "outputs": [],
    "source": [
     "print(resultado.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará los encabezados de la respuesta. "
    ]
   },
   {
@@ -413,7 +431,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para desplegar una imagen se utilziará el módulo _Image_ de iPython."
+    "* La clave ```'Content-Type'``` del objeto ```resultado.headers``` indica que el contenido corresponde a una imagen en formato *png*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultado.headers['Content-Type']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para desplegar una imagen se utilziará el módulo _Image_ de iPython."
    ]
   },
   {
@@ -447,9 +481,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ejemplo:**\n",
-    "\n",
-    "El método post aplicado a https://httpbin.org"
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A conrtinuación se utuilizará la función ```requests.post``` para enviar una carga de datos a la URL \"https://httpbin.org/post, la cual es capaz de procesar peticiones utilizando el método ```POST``` de *HTTP*.\n",
+    "* La carga de datose se enviará en formato *JSON*."
    ]
   },
   {
@@ -462,12 +502,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "respuesta.headers"
+    "* La clave ```'Content-Type'``` del objeto ```resultado.headers``` indica que el contenido son datos en formato JSON."
    ]
   },
   {
@@ -476,7 +514,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta.status_code"
+    "respuesta.headers['Content-Type']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A continuación se desplegará el contenido de la respuesta del servidor."
    ]
   },
   {
@@ -522,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
