--- a/04_configuracion_de_un_proyecto.ipynb
+++ b/04_configuracion_de_un_proyecto.ipynb
@@ -11,20 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ADVERTENCIA:** Es necesario haber creado previamente el proyecto definido en la notebook [02_introduccion_a_django.ipynb](02_introduccion_a_django.ipynb) localizado en el directorio [tutorial](tutorial)."
+    "**ADVERTENCIA:** Es necesario haber creado previamente el proyecto definido en la notebook [```02_introduccion_a_django.ipynb```](02_introduccion_a_django.ipynb) localizado en el directorio [```tutorial```](tutorial)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El archivo *settings.py*.\n",
+    "## El archivo ```settings.py```.\n",
     "\n",
-    "La configuración básica de un proyecto de *Django* se encuentra en un archivo de Python llamado *settings.py*. \n",
+    "La configuración básica de un proyecto de *Django* se encuentra en un archivo de Python llamado ```settings.py```. \n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/ref/settings\n",
+    "La documentación de la configuración de *Django* puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/settings\n",
     "\n",
-    "En el caso del proyecto creado previamente, dicho archivo se encuentra en *tutorial/tutorial/settings.py*."
+    "\n",
+    "**Nota:** En el caso del proyecto creado previamente, dicho archivo se encuentra en ```tutorial/tutorial/settings.py```."
    ]
   },
   {
@@ -33,23 +34,15 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* El comando mágico de Jupyter ```%pycat``` permite ver el contenido de un archivo.\n",
-    "* La siguiente celda desplegará el contenido del archivo *tutorial/tutorial/settings.py*\n"
+    "* El comando mágico de Jupyter ```%pycat``` permite ver el contenido de un script de de Python.\n",
+    "* La siguiente celda desplegará el contenido del archivo ```tutorial/tutorial/settings.py```.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: no such file, variable, URL, history range or macro\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pycat tutorial/tutorial/settings.py"
    ]
@@ -58,9 +51,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo define diversas variables, las cuales se encuentran escritas en mayúsculas, que definen ciertos parámentros de configuración del proyecto.\n",
+    "El archivo define diversas variables, las cuales se encuentran escritas en mayúscula\n",
     "\n",
-    "* A continuación se importará al archivo *tutorial/tutorial/settings.py* como un módulo."
+    "Cada variable definen ciertos parámentros de configuración del proyecto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A continuación se importará al archivo ```tutorial/tutorial/settings.py``` como un módulo."
    ]
   },
   {
@@ -85,7 +92,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable *settings.DEBUG*."
+    "## La variable ```settings.DEBUG```.\n",
+    "\n",
+    "Esta variable corresponde a un objeto tipo ```bool```, el cual le indica al servidor de *Django* si se encuentra en un entorno de desarrollo y pruebas o en un entorno de producción."
    ]
   },
   {
@@ -101,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable *settings.BASE_DIR*."
+    "## La variable ```settings.BASE_DIR```."
    ]
   },
   {
@@ -117,23 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable *settings.INSTALLED_APPS*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "settings.INSTALLED_APPS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## La variable *settings.ROOT_URLCONF*."
+    "## La variable ```settings.ROOT_URLCONF```."
    ]
   },
   {
@@ -149,7 +142,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable *settings.TEMPLATES*."
+    "## La variable ```settings.TEMPLATES```.\n",
+    "\n",
+    "Esta variable define la localización y la forma en la que s egestióna  las plantillas del proyecto. "
    ]
   },
   {
@@ -165,9 +160,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable *settings.DATABASE*.\n",
+    "## La variable ```settings.DATABASE```.\n",
     "\n",
-    "Para este proyecto se ha creado el archivo *tutorial/db.sqlite3*, el cual orreposnde a una base de datos de [SQLite](https://www.sqlite.org/index.html).\n",
+    "Para este proyecto se creó el archivo ```tutorial/db.sqlite3```, el cual corresponde a una base de datos de [SQLite](https://www.sqlite.org/index.html).\n",
     "\n",
     "Para saber más sobre SQLite, es posible consultar el tutorial localizado en http://www.sqlitetutorial.net/."
    ]
@@ -194,9 +189,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable *settings.MIDDLEWARE*.\n",
+    "## La variable ```settings.INSTALLED_APPS```.\n",
     "\n",
-    "https://docs.djangoproject.com/en/1.10/ref/middleware/#module-django.middleware"
+    "Esta variable define a las diversas aplicaciones que puede utilizar el proyecto.\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/ref/applications/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.INSTALLED_APPS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La variable ``` settings.MIDDLEWARE```.\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/ref/middleware/#module-django.middleware"
    ]
   },
   {
@@ -242,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
