--- a/01_introduccion.ipynb
+++ b/01_introduccion.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introducción."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Objetivos de este módulo.\n",
     "\n",
     "Este módulo tiene como objetivo el de presentar de forma detallada las principales funcionalidades del framework para desarrollo de aplicaciones web, *Django*.\n",
@@ -67,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
