--- a/02_introduccion_a_django.ipynb
+++ b/02_introduccion_a_django.ipynb
@@ -27,15 +27,15 @@
     "Entre otras cosas, *Django* cuenta con las siguientes funcionalidades:\n",
     "\n",
     "* Instalación y configuración sencilla y rápida.\n",
-    "* Cuenta con un ORM avanzado.\n",
+    "* Cuenta con un ORM (Object Relational Mapper) avanzado.\n",
     "* Utiliza plantillas (templates) para desplegar aplicaciones.\n",
     "* Soporta múltipes idiomas.\n",
     "* Diseñado para aprovechar el paradigma de desarrollo basado en pruebas (TDD).\n",
     "* Se apega al patrón [MVC](https://es.wikipedia.org/wiki/Modelo%E2%80%93vista%E2%80%93controlador) mediante la implementación del concepto  \"Model View Template\".\n",
     "* Hace énfasis en la seguridad.\n",
     "* Es escalable.\n",
-    "* Es muy versátil, ya que es una execlente plataforma para:\n",
-    "    * Deasrrollar aplicaciones web.\n",
+    "* Es muy versátil, ya que es una excelente plataforma para:\n",
+    "    * Desarrollar aplicaciones web.\n",
     "    * Desarrollar API web.\n",
     "    * Desarrollo de aplicaciones móviles.\n",
     "\n",
@@ -70,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install django"
+    "!pip list"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El resutlado sería algo similar a lo siguiente:\n",
+    "El resultado sería algo similar a lo siguiente:\n",
     "\n",
     "```\n",
     ".\n",
@@ -274,6 +274,15 @@
     "A diferencia de ```django-admin```, es necesario definir la ruta en la que se encuentra el script.\n",
     "\n",
     "**Nota:** Se recomienda ejecutar ```manage.py``` desde el directorio en el que dicho script se encuentra. A partir de este momento se dará por hecho lo anterior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat manage.py"
    ]
   },
   {
@@ -335,6 +344,69 @@
    "outputs": [],
    "source": [
     "!./manage.py startapp main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!which sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sqlite3 --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://www.sqlite.org/2019/sqlite-tools-linux-x86-3280000.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! unzip sqlite-tools-linux-x86-3280000.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!tree sqlite-tools-linux-x86-3280000/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sudo mv -v /usr/bin/sqlite3 /usr/bin/sqlite3.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sudo cp -v sqlite-tools-linux-x86-3280000/sqlite3 /usr/bin/"
    ]
   },
   {
