--- a/02_introduccion_a_django.ipynb
+++ b/02_introduccion_a_django.ipynb
@@ -52,12 +52,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "! pip install django"
+    "### Instalación en CentOS 7.\n",
+    "\n",
+    "A partir de *Django 2.2*, es necesario que el sistema en el que se instale cuente con una versión de *sqlite* que no está soportada por RHEL 7 ni por CentOS 7, , por lo que es necesario instalar *Django 2.1.1*.\n",
+    "\n",
+    "**Nota:** La máquina virtual proporcionada por Pythonista<sup>®</sup> está basada en CentOS 7, por lo que sólo podrá instalar , por lo que es necesario instalar *Django 2.1.1*."
    ]
   },
   {
@@ -66,9 +68,45 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "La siguiente celda instalará *Django* en el entorno virtual contenido en la Máquina Virtual proporcionada por Pythonista<sup>®</sup> en https://pythonista.io/descargas/base/view.\n",
+    "La siguiente celda instalará *Django 2.1.1.* en el entorno virtual contenido en la Máquina Virtual proporcionada por Pythonista<sup>®</sup> en https://pythonista.io/descargas/base/view."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install django==2.1.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instalación en otras plataformas.\n",
+    "\n",
+    "En el caso de las distribuciones de GNU/Linux como Ubuntu, Debian, etc.; Windows 10 y MacOS X, es posible instalar la versión más reciente de Django."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**\n",
+    "\n",
+    "La siguiente celda instalará la versión más reciente de *Django*.\n",
     "\n",
     "**Nota:** En caso de utilizar esta notebook en un entorno distinto al del la máquina virtual de Pythonista<sup>®</sup>, tome en cuenta que debe de contar con ```pip``` instalado y con los permisos necesarios para instalar el paquete correspondiente.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install django"
    ]
   },
   {
