--- a/04_configuracion_de_un_proyecto.ipynb
+++ b/04_configuracion_de_un_proyecto.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable ```settings.DEBUG```.\n",
+    "### La variable ```settings.DEBUG```.\n",
     "\n",
     "Esta variable corresponde a un objeto tipo ```bool```, el cual le indica al servidor de *Django* si se encuentra en un entorno de desarrollo y pruebas o en un entorno de producción."
    ]
@@ -110,7 +110,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable ```settings.BASE_DIR```."
+    "### La variable ```settings.SECRET_KEY```.\n",
+    "\n",
+    "Esta variable contiene una cadena de caracteres que fue creada junto con la estructura incial del proyecto, la cual será utilizada para autenticar y cifrar los accesos a las aplicaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.SECRET_KEY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La variable ```settings.BASE_DIR```.\n",
+    "\n",
+    "Esta variable define la ruta en la que s eenecuntra el directorio de origen del proyecto."
    ]
   },
   {
@@ -126,7 +146,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable ```settings.ROOT_URLCONF```."
+    "### La variable ```settings.ROOT_URLCONF```.\n",
+    "\n",
+    "Define la ruta en la que se puede acceder al módulo principal de configuración de *URLs*."
    ]
   },
   {
@@ -142,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable ```settings.TEMPLATES```.\n",
+    "### La variable ```settings.TEMPLATES```.\n",
     "\n",
     "Esta variable define la localización y la forma en la que s egestióna  las plantillas del proyecto. "
    ]
@@ -160,7 +182,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable ```settings.DATABASE```.\n",
+    "### La variable ```settings.DATABASE```.\n",
+    "\n",
+    "Esta variable define las conexiones a bases de datos de la aplicación.\n",
     "\n",
     "Para este proyecto se creó el archivo ```tutorial/db.sqlite3```, el cual corresponde a una base de datos de [SQLite](https://www.sqlite.org/index.html).\n",
     "\n",
@@ -209,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable ``` settings.MIDDLEWARE```.\n",
+    "### La variable ``` settings.MIDDLEWARE```.\n",
     "\n",
     "https://docs.djangoproject.com/en/2.2/ref/middleware/#module-django.middleware"
    ]
@@ -221,6 +245,58 @@
    "outputs": [],
    "source": [
     "settings.MIDDLEWARE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La variable ``` settings.STATIC_URL```.\n",
+    "\n",
+    "Define las rutas en las que se encuentra el contenido estático del proyecto. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La variable ```settings.TEMPLATES```.\n",
+    "\n",
+    "Esta varuiable define diversos aspectos de las plantillas que usa *Django* y cómo las procesa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.TEMPLATES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La variable ````settings.WSGI_APPLICATION```.\n",
+    "\n",
+    "Define el recurso encargado de gestionar las conexiones web mediante [```WSGI```}(https://en.wikipedia.org/wiki/Web_Server_Gateway_Interface)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "`settings.WSGI_APPLICATION"
    ]
   },
   {
@@ -257,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
