--- a/04_configuracion_de_un_proyecto.ipynb
+++ b/04_configuracion_de_un_proyecto.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Configuración inicial de un proyecto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**ADVERTENCIA:** Es necesario haber creado previamente el proyecto definido en la notebook [```02_introduccion_a_django.ipynb```](02_introduccion_a_django.ipynb) localizado en el directorio [```tutorial```](tutorial)."
    ]
   },
@@ -76,6 +83,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from tutorial.tutorial import settings as settings"
    ]
   },
@@ -83,6 +99,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "tutorial.tutorial.settings.DEBUG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "dir(settings)"
@@ -261,31 +288,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### La variable ```settings.TEMPLATES```.\n",
-    "\n",
-    "Esta varuiable define diversos aspectos de las plantillas que usa *Django* y cómo las procesa."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "settings.TEMPLATES"
+    "settings.STATIC_URL"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La variable ````settings.WSGI_APPLICATION```.\n",
+    "### La variable ```settings.WSGI_APPLICATION```.\n",
     "\n",
     "Define el recurso encargado de gestionar las conexiones web mediante [```WSGI```}(https://en.wikipedia.org/wiki/Web_Server_Gateway_Interface)."
    ]
@@ -296,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "`settings.WSGI_APPLICATION"
+    "settings.WSGI_APPLICATION"
    ]
   },
   {
@@ -304,6 +315,10 @@
    "metadata": {},
    "source": [
     "## Despliegue en producción.\n",
+    "\n",
+    "*Django* puede ser configurado de tal forma que pueda ejecutrase en un entorno de desarrollo y bruebas o en un entrono de pproducción.\n",
+    "\n",
+    "La siguiente liga corrssponde a una serie de sugerencia en caso de publicar un proyecto en un entorno de producción.\n",
     "\n",
     "https://docs.djangoproject.com/en/2.2/howto/deployment/checklist/"
    ]
