--- a/05_mvc_mvt_y_servicios_web.ipynb
+++ b/05_mvc_mvt_y_servicios_web.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "### *Controlador*.\n",
     "\n",
-    "Los controladores son gestores de eventos, los cuales tienen la capacidad de cambiar el estado del modelo."
+    "Los controladores son gestores de eventos los cuales tienen la capacidad de cambiar el estado del modelo."
    ]
   },
   {
@@ -80,9 +80,9 @@
     "\n",
     "Una aplicación web por lo general está enfocada a realizar transacciones que son accesibles a un usuario final y en las que la interfaz juega un papel predominate.\n",
     "\n",
-    "### Servicio web.\n",
+    "### Servicios web (web services).\n",
     "\n",
-    "Un servicio web está enfocado a la realización de transacciones en la que el énfasis se hace en la correcta transmisión de datos.\n",
+    "Un servicio web está enfocado a la realización de transacciones en la que el énfasis se hace en la correcta transmisión de datos mediante los protocolos *HTTP* o *HTTPS*.\n",
     "\n",
     "### Puntos de acceso (*Endpoints*).\n",
     "\n",
@@ -137,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
