--- a/03_el_protocolo_http.ipynb
+++ b/03_el_protocolo_http.ipynb
@@ -32,7 +32,7 @@
     "*HTTP* está basado en  una arquitectura cliente-servidor en la que se intercambian peticiones (requests) por parte del cliente y respuestas (responses) por parte del servidor y tiene las siguientes caracterísiticas. \n",
     "\n",
     "* **Sin estado.** Es decir, que cada una de las transacciones request/response que se realizan no afectan al estado del cliente o del servidor, además de que cada transacción es totalmente independiente de el resto.\n",
-    "* **Independiente del contenido.** Aún cuando es muy común que un servidor HTTP entregue documentos HTML, pero no existe restricción en el tipo de recurso al que se pueda acceder.\n",
+    "* **Independiente del contenido.** Aún cuando es muy común que un servidor *HTTP* entregue documentos *HTML*, pero no existe restricción en el tipo de recurso al que se pueda acceder.\n",
     "* **Sin conexión.** Una vez que la transacción request/response es terminada, la conexión entre cliente y servidor es destruida.\n"
    ]
   },
@@ -87,7 +87,7 @@
     "* 4xx Error del cliente.\n",
     "* 5xx Error del servidor.\n",
     "\n",
-    "Puede consultar los mensajes de estado de HTTP en la siguiente liga: http://www.restapitutorial.com/httpstatuscodes.html"
+    "Puede consultar los mensajes de estado de *HTTP* en la siguiente liga: http://www.restapitutorial.com/httpstatuscodes.html"
    ]
   },
   {
@@ -98,9 +98,9 @@
     "\n",
     "El protocolo *HTTP* define métodos o \"verbos\", los cuales permiten realizar peticiones específicas entre un cliente y un servidor. Algunos de los métodos más utilizados son:\n",
     "\n",
-    "* ```GET``` se utiliza para obtener los datos de un recurso a partir de una URL. La información enviada mediante ```GET``` puede ser añadida a marcadores y puede ser regsitrada en las bitácoras del servidor.\n",
+    "* ```GET``` se utiliza para obtener los datos de un recurso a partir de una *URL*. La información enviada mediante ```GET``` puede ser añadida a marcadores y puede ser regsitrada en las bitácoras del servidor.\n",
     "* ```HEAD``` es similar al método ```GET```, pero sólo proporciona el encabezado de la petición y el mensaje de estado resultante.\n",
-    "* ```POST``` se utiliza para cear un recurso. Los datos enviados no son expuestos en la URI sino que son enviados dentro de la estructura de la petición. \n",
+    "* ```POST``` se utiliza para cear un recurso. Los datos enviados no son expuestos en la *URL* sino que son enviados dentro de la estructura de la petición. \n",
     "* ```PUT``` se utiliza para sustituir un recurso existente y su estructura es similar a la de ```POST```.\n",
     "* ```PATCH``` es un método que se utiliza para modificar parcialmente un recurso.\n",
     "* ```DELETE``` es un método que se utiliza para eliminar un recurso. \n",
@@ -120,7 +120,7 @@
     "|  ```GET```  | Sí | Sí |\n",
     "|  ```HEAD```  | Sí | Sí |\n",
     "|  ```DELETE```  |Sí| No |\n",
-    "|  ``POST``` | No | No|\n",
+    "|  ```POST``` | No | No|\n",
     "|  ```PUT```  | Sí | No|\n",
     "|  ```PATCH``` |No| No| \n",
     "\n",
@@ -135,9 +135,23 @@
    "source": [
     "## El paquete ```requests```.\n",
     "\n",
-    "El paquete [```requests```](http://docs.python-requests.org)  permite hacer peticiones mediante funciones que emulan los métodos del protocolo HTTP, regresando un objeto de Python que contiene los mensajes y datos de la respuesta del servidor a modo de atributos.\n",
+    "El paquete [```requests```](http://docs.python-requests.org)  permite hacer peticiones mediante funciones que emulan los métodos del protocolo *HTTP*, regresando un objeto de Python que contiene los mensajes y datos de la respuesta del servidor a modo de atributos.\n",
     "\n",
-    "El paquete *requests* presenta funcionalidades avanzadas como autenticación, conexiones seguras, manejo de 'cookies', etc. "
+    "```\n",
+    "requests.<metodo>('<URL>, <argumentos>')\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "El paquete *requests* presenta funcionalidades avanzadas como autenticación, conexiones seguras, manejo de 'cookies', etc. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
    ]
   },
   {
@@ -156,15 +170,6 @@
    "outputs": [],
    "source": [
     "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(requests.get)"
    ]
   },
   {
@@ -488,8 +493,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A conrtinuación se utuilizará la función ```requests.post``` para enviar una carga de datos a la URL \"https://httpbin.org/post, la cual es capaz de procesar peticiones utilizando el método ```POST``` de *HTTP*.\n",
-    "* La carga de datose se enviará en formato *JSON*."
+    "* A continuación se utilizará la función ```requests.post``` para enviar una carga de datos a la *URL* \"https://httpbin.org/post, la cual es capaz de procesar peticiones utilizando el método ```POST``` de *HTTP*.\n",
+    "* La carga de dato se se enviará en formato *JSON*.\n",
+    "* El objeto resultante tendrá el nomre ```respuesta```."
    ]
   },
   {
@@ -530,7 +536,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "respuesta.content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* El objeto ```respuesta``` contiene al método ```json()```, el cual regresa un objeto tipo ```dict``` con información obtenida de una respuesta enviada en *JSON*.\n",
+    "\n",
+    "**Advertencia:** Este método sólo se puede ejecutar cuando el servidor envía una respuesta en formato *JSON*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "respuesta.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "respuesta_json = respuesta.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "respuesta_json['json']"
    ]
   },
   {
@@ -567,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
